<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="preference_angle_highlight_color">Angle/altitude highlight color</string>
    <string name="preference_angle_highlight_color_summary">Highlight color for when camera is nearly level</string>
    <string name="preference_crop_guide">Show a crop guide</string>
    <string name="preference_crop_guide_summary">"A crop guide displays a rectangle showing what the specified aspect ratio looks like - useful if you plan to crop the photo/video afterwards to a different aspect ratio. Requires WYSIWYG photo mode, or being in video mode.
%s"</string>
    <string name="preference_focus_assist">Focus assist</string>
    <string name="preference_focus_assist_summary">"Whether to zoom in when adjusting manual focus distance
%s"</string>
    <string name="preference_focus_peaking">Focus peaking</string>
    <string name="preference_focus_peaking_color">Focus peaking color</string>
    <string name="preference_focus_peaking_color_summary">"Which color to use for highlighting the in-focus edges
%s"</string>
    <string name="preference_focus_peaking_summary">"If this option is enabled, highlights will be shown on in-focus edges (contours). This is primarily useful for manual focus, and can be used to help determine which regions of the image are in focus.
%s"</string>
    <string name="preference_free_memory">Show free memory</string>
    <string name="preference_free_memory_summary">Display the remaining device storage space on screen</string>
    <string name="preference_ghost_image">Ghost image</string>
    <string name="preference_ghost_image_alpha">Ghost image opacity</string>
    <string name="preference_ghost_image_alpha_summary">"Alpha value to use for ghost images. A lower value means more transparent, higher means more opaque.
%s"</string>
    <string name="preference_ghost_image_summary">"Display an image over the preview, to help with alignment.
%s"</string>
    <string name="preference_grid">Show a grid</string>
    <string name="preference_histogram">Show a histogram</string>
    <string name="preference_histogram_summary">"Whether to display histogram of the colors shown on-screen
%s"</string>
    <string name="preference_immersive_mode">Immersive mode</string>
    <string name="preference_keep_display_on">Keep display on</string>
    <string name="preference_keep_display_on_summary">"If enabled, the screen won't switch off while the main Open Camera UI is active"</string>
    <string name="preference_licence_androidx">AndroidX libraries</string>
    <string name="preference_licence_androidx_text">Open Camera uses the AndroidX/Jetpack libraries under the Apache license version 2.0. Tap here for full licence text.</string>
    <string name="preference_licence_google_icons">"Google's Material Design icons"</string>
    <string name="preference_licence_google_icons_text">"Open Camera uses icons from Google's Material Design icons (https://developer.android.com/design/downloads/index.html , https://design.google.com/icons/ , https://github.com/google/material-design-icons/ , https://google.github.io/material-design-icons/ , https://fonts.google.com/icons) under the Apache license version 2.0. Some icons include modifications. Tap here for full licence text."</string>
    <string name="preference_licence_online">Online licences</string>
    <string name="preference_licence_online_text">Please tap here for full online licensing information (opens in your browser).</string>
    <string name="preference_licence_open_camera">Open Camera</string>
    <string name="preference_licence_open_camera_text">Open Camera is © 2013–2024 Mark Harman, released under the GPL v3 or later. Tap here for full licence text and terms of service.</string>
    <string name="preference_max_brightness">Force maximum brightness</string>
    <string name="preference_max_brightness_summary">Force screen display to be at maximum brightness, rather than device default</string>
    <string name="preference_multi_cam_button">Multiple cameras icon</string>
    <string name="preference_multi_cam_button_summary">If enabled, use separate buttons to switch between front/back cameras, and to switch between multiple front/back facing cameras. If disabled, the Switch Camera icon will cycle through all cameras.</string>
    <string name="preference_preview_size">Preview size</string>
    <string name="preference_rotate_preview">Rotate preview</string>
    <string name="preference_rotate_preview_summary">"Option to rotate the preview (won't affect resultant photos/videos)
%s"</string>
    <string name="preference_show_angle">Show angle</string>
    <string name="preference_show_angle_line">Show angle line</string>
    <string name="preference_show_angle_line_summary">Display horizontal level line</string>
    <string name="preference_show_angle_summary">Display the current device orientation angle on screen</string>
    <string name="preference_show_auto_level">Show auto-level icon</string>
    <string name="preference_show_auto_level_summary">Whether to show an on-screen icon for enabling or disabling auto-level. When auto-level is enabled, photos will be rotated so they are automatically level with the horizon.</string>
    <string name="preference_show_battery">Show battery</string>
    <string name="preference_show_battery_summary">Display the current battery level on screen</string>
    <string name="preference_show_camera_id">Show camera ID</string>
    <string name="preference_show_camera_id_summary">Display the current camera ID number on screen</string>
    <string name="preference_show_cycle_flash">Show flash icon</string>
    <string name="preference_show_cycle_flash_summary">Whether to show an on-screen icon for cycling through the flash options, instead of displaying flash options on the popup menu. Note that torch is not available if using this icon.</string>
    <string name="preference_show_cycle_raw">Show RAW icon</string>
    <string name="preference_show_cycle_raw_summary">Whether to show an on-screen icon for cycling through the RAW modes</string>
    <string name="preference_show_exposure_lock">Show auto exposure lock icon</string>
    <string name="preference_show_exposure_lock_summary">Whether to show an on-screen icon for locking or unlocking exposure</string>
    <string name="preference_show_face_detection">Show face detection icon</string>
    <string name="preference_show_face_detection_summary">Whether to show an on-screen icon for enabling or disabling face detection</string>
    <string name="preference_show_focus_peaking">Show focus peaking icon</string>
    <string name="preference_show_focus_peaking_summary">Whether to show an on-screen icon for enabling or disabling focus peaking. When focus peaking is enabled, highlights will be shown on in-focus edges (contours). See Settings/Camera preview/Focus peaking.</string>
    <string name="preference_show_geo_direction">Show compass direction</string>
    <string name="preference_show_geo_direction_lines">Show compass direction lines</string>
    <string name="preference_show_geo_direction_lines_summary">Display compass direction lines</string>
    <string name="preference_show_geo_direction_summary">Display the compass direction of the device on screen</string>
    <string name="preference_show_iso">Show ISO</string>
    <string name="preference_show_iso_summary">Display the current ISO level. (Requires Camera2 API.)</string>
    <string name="preference_show_pitch_lines">Show pitch lines</string>
    <string name="preference_show_pitch_lines_summary">Display horizontal pitch lines</string>
    <string name="preference_show_stamp">Show stamp photo icon</string>
    <string name="preference_show_stamp_summary">Whether to show an on-screen icon for enabling or disabling photo stamp</string>
    <string name="preference_show_store_location">Show store location data icon</string>
    <string name="preference_show_store_location_summary">Whether to show an on-screen icon for enabling or disabling location data (geotagging)</string>
    <string name="preference_show_take_photo">Show \"Take Photo\" icon</string>
    <string name="preference_show_take_photo_summary">"Show the icon for taking photos and recording videos. Uncheck if you'd rather take photos by other methods (e.g., if your device has a hardware shutter button, or using the volume keys)."</string>
    <string name="preference_show_textstamp">Show custom text stamp photo icon</string>
    <string name="preference_show_textstamp_summary">Whether to show an on-screen icon for specifying custom text to be stamped onto the photo</string>
    <string name="preference_show_time">Show time</string>
    <string name="preference_show_time_summary">Display the current time on screen</string>
    <string name="preference_show_toasts">Show on-screen messages</string>
    <string name="preference_show_toasts_summary">Whether to display temporary on-screen info messages</string>
    <string name="preference_show_video_max_amp">Show audio level meter</string>
    <string name="preference_show_video_max_amp_summary">Whether to show on-screen audio level when recording video</string>
    <string name="preference_show_whats_new">"Shows What's New dialog"</string>
    <string name="preference_show_whats_new_summary">Whether to display information on new features and improvements when the application has updated</string>
    <string name="preference_show_white_balance_lock">Show auto white balance lock icon</string>
    <string name="preference_show_white_balance_lock_summary">Whether to show an on-screen icon for locking or unlocking auto white balance</string>
    <string name="preference_show_zoom">Show zoom</string>
    <string name="preference_show_zoom_controls">Show zoom -/+ controls</string>
    <string name="preference_show_zoom_controls_summary">Show the -/+ buttons for zoom control</string>
    <string name="preference_show_zoom_slider_controls">Show zoom slider control</string>
    <string name="preference_show_zoom_slider_controls_summary">Show the slider for zoom control</string>
    <string name="preference_show_zoom_summary">Display the current camera zoom level on screen (when zoomed in)</string>
    <string name="preference_take_photo_border">Show border when taking photo</string>
    <string name="preference_take_photo_border_summary">Display a border on the display to indicate taking a photo</string>
    <string name="preference_thumbnail_animation">Show thumbnail animation</string>
    <string name="preference_thumbnail_animation_summary">Display moving thumbnail animation when taking a photo</string>
    <string name="preference_ui_placement">UI placement</string>
    <string name="preference_zebra_stripes">Show zebra stripes</string>
    <string name="preference_zebra_stripes_background_color">Zebra stripes background color</string>
    <string name="preference_zebra_stripes_background_color_summary">"Color to use for the background stripe when showing zebra stripes.
%s"</string>
    <string name="preference_zebra_stripes_foreground_color">Zebra stripes foreground color</string>
    <string name="preference_zebra_stripes_foreground_color_summary">"Color to use for the foreground stripe when showing zebra stripes.
%s"</string>
    <string name="preference_zebra_stripes_summary">"If this option is enabled, zebra stripes will be drawn on-screen showing where the camera preview is over exposed.
%s"</string>
</resources>