<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:key="preferences_root"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference android:entries="@array/preference_ui_placement_entries" android:title="@string/preference_ui_placement" android:key="preference_ui_placement" android:summary="%s" android:defaultValue="ui_top" android:entryValues="@array/preference_ui_placement_values" />
    <ListPreference android:entries="@array/preference_immersive_mode_entries" android:title="@string/preference_immersive_mode" android:key="preference_immersive_mode" android:summary="%s" android:defaultValue="immersive_mode_low_profile" android:entryValues="@array/preference_immersive_mode_values" />
    <CheckBoxPreference android:icon="@drawable/ic_face_white_48dp" android:title="@string/preference_show_face_detection" android:key="preference_show_face_detection" android:summary="@string/preference_show_face_detection_summary" android:defaultValue="false" />
    <CheckBoxPreference android:icon="@drawable/flash_on" android:title="@string/preference_show_cycle_flash" android:key="preference_show_cycle_flash" android:summary="@string/preference_show_cycle_flash_summary" android:defaultValue="false" />
    <CheckBoxPreference android:icon="@drawable/key_visualizer" android:title="@string/preference_show_focus_peaking" android:key="preference_show_focus_peaking" android:summary="@string/preference_show_focus_peaking_summary" android:defaultValue="false" />
    <CheckBoxPreference android:icon="@drawable/auto_stabilise_icon" android:title="@string/preference_show_auto_level" android:key="preference_show_auto_level" android:summary="@string/preference_show_auto_level_summary" android:defaultValue="false" />
    <CheckBoxPreference android:icon="@drawable/ic_text_format_white_48dp" android:title="@string/preference_show_stamp" android:key="preference_show_stamp" android:summary="@string/preference_show_stamp_summary" android:defaultValue="false" />
    <CheckBoxPreference android:icon="@drawable/baseline_text_fields_white_48" android:title="@string/preference_show_textstamp" android:key="preference_show_textstamp" android:summary="@string/preference_show_textstamp_summary" android:defaultValue="false" />
    <CheckBoxPreference android:icon="@drawable/ic_gps_fixed_white_48dp" android:title="@string/preference_show_store_location" android:key="preference_show_store_location" android:summary="@string/preference_show_store_location_summary" android:defaultValue="false" />
    <CheckBoxPreference android:icon="@drawable/raw_icon" android:title="@string/preference_show_cycle_raw" android:key="preference_show_cycle_raw" android:summary="@string/preference_show_cycle_raw_summary" android:defaultValue="false" />
    <CheckBoxPreference android:icon="@drawable/white_balance_unlocked" android:title="@string/preference_show_white_balance_lock" android:key="preference_show_white_balance_lock" android:summary="@string/preference_show_white_balance_lock_summary" android:defaultValue="false" />
    <CheckBoxPreference android:icon="@drawable/exposure_unlocked" android:title="@string/preference_show_exposure_lock" android:key="preference_show_exposure_lock" android:summary="@string/preference_show_exposure_lock_summary" android:defaultValue="true" />
    <CheckBoxPreference android:title="@string/preference_show_zoom_controls" android:key="preference_show_zoom_controls" android:summary="@string/preference_show_zoom_controls_summary" android:defaultValue="false" />
    <CheckBoxPreference android:title="@string/preference_show_zoom_slider_controls" android:key="preference_show_zoom_slider_controls" android:summary="@string/preference_show_zoom_slider_controls_summary" android:defaultValue="true" />
    <CheckBoxPreference android:title="@string/preference_show_take_photo" android:key="preference_show_take_photo" android:summary="@string/preference_show_take_photo_summary" android:defaultValue="true" />
    <CheckBoxPreference android:title="@string/preference_show_toasts" android:key="preference_show_toasts" android:summary="@string/preference_show_toasts_summary" android:defaultValue="true" />
    <CheckBoxPreference android:title="@string/preference_show_whats_new" android:key="preference_show_whats_new" android:summary="@string/preference_show_whats_new_summary" android:defaultValue="true" />
    <SwitchPreference android:title="@string/preference_multi_cam_button" android:key="preference_multi_cam_button" android:summary="@string/preference_multi_cam_button_summary" android:defaultValue="true" />
    <SwitchPreference android:title="@string/preference_keep_display_on" android:key="preference_keep_display_on" android:summary="@string/preference_keep_display_on_summary" android:defaultValue="true" />
    <SwitchPreference android:title="@string/preference_max_brightness" android:key="preference_max_brightness" android:summary="@string/preference_max_brightness_summary" android:defaultValue="true" />
</PreferenceScreen>