<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:key="preferences_root"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference android:entries="@array/preference_preview_size_entries" android:title="@string/preference_preview_size" android:key="preference_preview_size" android:summary="%s" android:defaultValue="preference_preview_size_wysiwyg" android:entryValues="@array/preference_preview_size_values" />
    <ListPreference android:entries="@array/preference_ghost_image_entries" android:title="@string/preference_ghost_image" android:key="preference_ghost_image" android:summary="@string/preference_ghost_image_summary" android:defaultValue="preference_ghost_image_off" android:entryValues="@array/preference_ghost_image_values" />
    <net.sourceforge.opencamera.ui.ArraySeekBarPreference android:title="@string/preference_ghost_image_alpha" android:key="ghost_image_alpha" android:summary="@string/preference_ghost_image_alpha_summary" android:defaultValue="50" />
    <ListPreference android:entries="@array/preference_focus_assist_entries" android:title="@string/preference_focus_assist" android:key="preference_focus_assist" android:summary="@string/preference_focus_assist_summary" android:defaultValue="0" android:entryValues="@array/preference_focus_assist_values" />
    <CheckBoxPreference android:title="@string/preference_show_zoom" android:key="preference_show_zoom" android:summary="@string/preference_show_zoom_summary" android:defaultValue="true" />
    <CheckBoxPreference android:title="@string/preference_show_angle" android:key="preference_show_angle" android:summary="@string/preference_show_angle_summary" android:defaultValue="false" />
    <CheckBoxPreference android:title="@string/preference_show_angle_line" android:key="preference_show_angle_line" android:summary="@string/preference_show_angle_line_summary" android:defaultValue="false" />
    <CheckBoxPreference android:title="@string/preference_show_pitch_lines" android:key="preference_show_pitch_lines" android:summary="@string/preference_show_pitch_lines_summary" android:defaultValue="false" />
    <ListPreference android:entries="@array/preference_angle_highlight_color_entries" android:title="@string/preference_angle_highlight_color" android:key="preference_angle_highlight_color" android:summary="@string/preference_angle_highlight_color_summary" android:defaultValue="\#14e715" android:entryValues="@array/preference_angle_highlight_color_values" />
    <CheckBoxPreference android:title="@string/preference_show_geo_direction" android:key="preference_show_geo_direction" android:summary="@string/preference_show_geo_direction_summary" android:defaultValue="false" />
    <CheckBoxPreference android:title="@string/preference_show_geo_direction_lines" android:key="preference_show_geo_direction_lines" android:summary="@string/preference_show_geo_direction_lines_summary" android:defaultValue="false" />
    <CheckBoxPreference android:title="@string/preference_show_battery" android:key="preference_show_battery" android:summary="@string/preference_show_battery_summary" android:defaultValue="true" />
    <CheckBoxPreference android:title="@string/preference_show_time" android:key="preference_show_time" android:summary="@string/preference_show_time_summary" android:defaultValue="true" />
    <CheckBoxPreference android:title="@string/preference_show_camera_id" android:key="preference_show_camera_id" android:summary="@string/preference_show_camera_id_summary" android:defaultValue="true" />
    <CheckBoxPreference android:title="@string/preference_free_memory" android:key="preference_free_memory" android:summary="@string/preference_free_memory_summary" android:defaultValue="true" />
    <CheckBoxPreference android:title="@string/preference_show_iso" android:key="preference_show_iso" android:summary="@string/preference_show_iso_summary" android:defaultValue="true" />
    <ListPreference android:entries="@array/preference_histogram_entries" android:title="@string/preference_histogram" android:key="preference_histogram" android:summary="@string/preference_histogram_summary" android:defaultValue="preference_histogram_off" android:entryValues="@array/preference_histogram_values" />
    <ListPreference android:entries="@array/preference_zebra_stripes_entries" android:title="@string/preference_zebra_stripes" android:key="preference_zebra_stripes" android:summary="@string/preference_zebra_stripes_summary" android:defaultValue="0" android:entryValues="@array/preference_zebra_stripes_values" />
    <ListPreference android:entries="@array/preference_zebra_stripes_foreground_color_entries" android:title="@string/preference_zebra_stripes_foreground_color" android:key="preference_zebra_stripes_foreground_color" android:summary="@string/preference_zebra_stripes_foreground_color_summary" android:defaultValue="\#ff000000" android:entryValues="@array/preference_zebra_stripes_foreground_color_values" />
    <ListPreference android:entries="@array/preference_zebra_stripes_background_color_entries" android:title="@string/preference_zebra_stripes_background_color" android:key="preference_zebra_stripes_background_color" android:summary="@string/preference_zebra_stripes_background_color_summary" android:defaultValue="\#ffffffff" android:entryValues="@array/preference_zebra_stripes_background_color_values" />
    <ListPreference android:entries="@array/preference_focus_peaking_entries" android:title="@string/preference_focus_peaking" android:key="preference_focus_peaking" android:summary="@string/preference_focus_peaking_summary" android:defaultValue="preference_focus_peaking_off" android:entryValues="@array/preference_focus_peaking_values" />
    <ListPreference android:entries="@array/preference_angle_highlight_color_entries" android:title="@string/preference_focus_peaking_color" android:key="preference_focus_peaking_color" android:summary="@string/preference_focus_peaking_color_summary" android:defaultValue="\#ffffff" android:entryValues="@array/preference_angle_highlight_color_values" />
    <CheckBoxPreference android:title="@string/preference_show_video_max_amp" android:key="preference_show_video_max_amp" android:summary="@string/preference_show_video_max_amp_summary" android:defaultValue="false" />
    <ListPreference android:entries="@array/preference_grid_entries" android:title="@string/preference_grid" android:key="preference_grid" android:summary="%s" android:defaultValue="preference_grid_none" android:entryValues="@array/preference_grid_values" />
    <ListPreference android:entries="@array/preference_crop_guide_entries" android:title="@string/preference_crop_guide" android:key="preference_crop_guide" android:summary="@string/preference_crop_guide_summary" android:defaultValue="crop_guide_none" android:entryValues="@array/preference_crop_guide_values" />
    <CheckBoxPreference android:title="@string/preference_thumbnail_animation" android:key="preference_thumbnail_animation" android:summary="@string/preference_thumbnail_animation_summary" android:defaultValue="true" />
    <CheckBoxPreference android:title="@string/preference_take_photo_border" android:key="preference_take_photo_border" android:summary="@string/preference_take_photo_border_summary" android:defaultValue="true" />
    <ListPreference android:entries="@array/preference_rotate_preview_entries" android:title="@string/preference_rotate_preview" android:key="preference_rotate_preview" android:summary="@string/preference_rotate_preview_summary" android:defaultValue="0" android:entryValues="@array/preference_rotate_preview_values" />
</PreferenceScreen>